// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AviosDetailsScreen should render with description & tabs 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AviosDetailsScreen
    accountNumberValue=""
    amountValue=""
    code="1234"
    coins={123}
    confirmButtonLabel=""
    cost={1234}
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    description="A thing that does stuff"
    forenameValue=""
    hasErrorAccountNumber={false}
    instruction="instruction test"
    instructions={
      Array [
        "These",
        "are",
        "instructions",
      ]
    }
    instructionsHeading=""
    instructionsParagraph=""
    isDisabledCta={false}
    items={
      Array [
        Object {
          "id": "",
          "label": "",
        },
      ]
    }
    labelCtaPrimary="CTA Primary"
    loyaltyList={
      Array [
        Object {
          "id": "program test",
          "label": "test",
        },
      ]
    }
    loyaltyValue=""
    onCardChange={[MockFunction]}
    onForenameChange={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onPressAmountPicker={[MockFunction]}
    onPressConfirm={[MockFunction]}
    onPressLoyaltyPicker={[MockFunction]}
    onPressPolicy={[MockFunction]}
    onPressSetUp={[MockFunction]}
    onPressTopBar={[MockFunction]}
    onRightTabPress={[MockFunction]}
    onSurnameChange={[MockFunction]}
    rewardCurrency="AVIOS"
    rewardValue={123}
    surnameValue=""
    uiSettings={
      Object {
        "__typename": "RewardUiSettings",
        "logoHeight": 1234,
        "logoWidth": 1234,
      }
    }
    welcomeHeading=""
    welcomeParagraph=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock
          contentContainerStyle={
            Object {
              "width": 750,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View>
            <Pad
              height={60}
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                }
              }
            >
              <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />
            </View>
            <RewardsListItem
              code="1234"
              cost={1234}
              onPress={[Function]}
              rewardCurrency="AVIOS"
              rewardValue={123}
              settings={
                Object {
                  "__typename": "RewardUiSettings",
                  "logoHeight": 1234,
                  "logoWidth": 1234,
                }
              }
            />
            <View
              style={
                Object {
                  "marginTop": 60,
                  "paddingHorizontal": 30,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 40,
                    "marginBottom": 30,
                  }
                }
              >
                
              </YuText>
              <YuText
                style={
                  Object {
                    "fontSize": 32,
                    "lineHeight": 46,
                  }
                }
              >
                
              </YuText>
            </View>
            <View
              style={
                Object {
                  "marginTop": 60,
                  "paddingHorizontal": 30,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "fontSize": 40,
                    "marginBottom": 30,
                  }
                }
              >
                
              </YuText>
              <YuText
                style={
                  Object {
                    "fontSize": 32,
                    "lineHeight": 46,
                  }
                }
              >
                
              </YuText>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 40,
                "paddingHorizontal": 88,
              }
            }
          >
            <Picker
              icon="heart"
              label=""
              onPress={[Function]}
              placeholder="loyalty programme"
            />
            <TextInput
              onChange={[MockFunction]}
              placeholder="forename"
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Text"
              value=""
            />
            <TextInput
              onChange={[MockFunction]}
              placeholder="surname"
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Text"
              value=""
            />
            <TextInput
              errorMessage="Please enter a valid account number"
              hasError={false}
              onChange={[MockFunction]}
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Card"
              value=""
            />
            <Picker
              icon="coins"
              label=""
              onPress={[Function]}
              placeholder="amount"
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 50,
                "width": "100%",
              }
            }
          >
            <Button
              label=""
              onPress={[MockFunction]}
              type="Primary"
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 32,
                "width": "100%",
              }
            }
          >
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "new to Avios?",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Reward Policy",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />
          </View>
          <Pad
            height={50}
          />
        </ScrollViewMock>,
        <View
          style={
            Object {
              "backgroundColor": "white",
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={123}
            leftIcon="Back"
            onPressLeftIcon={[MockFunction]}
          />
        </View>,
      ],
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <Pad
                height={60}
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />
              </View>
              <RewardsListItem
                code="1234"
                cost={1234}
                onPress={[Function]}
                rewardCurrency="AVIOS"
                rewardValue={123}
                settings={
                  Object {
                    "__typename": "RewardUiSettings",
                    "logoHeight": 1234,
                    "logoWidth": 1234,
                  }
                }
              />
              <View
                style={
                  Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 40,
                      "marginBottom": 30,
                    }
                  }
                >
                  
                </YuText>
                <YuText
                  style={
                    Object {
                      "fontSize": 32,
                      "lineHeight": 46,
                    }
                  }
                >
                  
                </YuText>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 40,
                      "marginBottom": 30,
                    }
                  }
                >
                  
                </YuText>
                <YuText
                  style={
                    Object {
                      "fontSize": 32,
                      "lineHeight": 46,
                    }
                  }
                >
                  
                </YuText>
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                }
              }
            >
              <Picker
                icon="heart"
                label=""
                onPress={[Function]}
                placeholder="loyalty programme"
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="forename"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="surname"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                errorMessage="Please enter a valid account number"
                hasError={false}
                onChange={[MockFunction]}
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Card"
                value=""
              />
              <Picker
                icon="coins"
                label=""
                onPress={[Function]}
                placeholder="amount"
              />
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                }
              }
            >
              <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                }
              }
            >
              <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />
            </View>,
            <Pad
              height={50}
            />,
          ],
          "contentContainerStyle": Object {
            "width": 750,
          },
          "showsVerticalScrollIndicator": false,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={60}
                />,
                <View
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                >
                  <RewardTabs
                    activeTabIndex={0}
                    onLeftTabPress={[MockFunction]}
                    onRightTabPress={[MockFunction]}
                  />
                </View>,
                <RewardsListItem
                  code="1234"
                  cost={1234}
                  onPress={[Function]}
                  rewardCurrency="AVIOS"
                  rewardValue={123}
                  settings={
                    Object {
                      "__typename": "RewardUiSettings",
                      "logoHeight": 1234,
                      "logoWidth": 1234,
                    }
                  }
                />,
                <View
                  style={
                    Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      }
                    }
                  >
                    
                  </YuText>
                  <YuText
                    style={
                      Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      }
                    }
                  >
                    
                  </YuText>
                </View>,
                <View
                  style={
                    Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      }
                    }
                  >
                    
                  </YuText>
                  <YuText
                    style={
                      Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      }
                    }
                  >
                    
                  </YuText>
                </View>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 60,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <RewardTabs
                    activeTabIndex={0}
                    onLeftTabPress={[MockFunction]}
                    onRightTabPress={[MockFunction]}
                  />,
                  "style": Object {
                    "alignItems": "center",
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeTabIndex": 0,
                    "onLeftTabPress": [MockFunction],
                    "onRightTabPress": [MockFunction],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "code": "1234",
                  "cost": 1234,
                  "onPress": [Function],
                  "rewardCurrency": "AVIOS",
                  "rewardValue": 123,
                  "settings": Object {
                    "__typename": "RewardUiSettings",
                    "logoHeight": 1234,
                    "logoWidth": 1234,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        }
                      }
                    >
                      
                    </YuText>,
                    <YuText
                      style={
                        Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        }
                      }
                    >
                      
                    </YuText>,
                  ],
                  "style": Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "",
                      "style": Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      },
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "",
                      "style": Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      },
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        }
                      }
                    >
                      
                    </YuText>,
                    <YuText
                      style={
                        Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        }
                      }
                    >
                      
                    </YuText>,
                  ],
                  "style": Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "",
                      "style": Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      },
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "",
                      "style": Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      },
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Picker
                  icon="heart"
                  label=""
                  onPress={[Function]}
                  placeholder="loyalty programme"
                />,
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="forename"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />,
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="surname"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />,
                <TextInput
                  errorMessage="Please enter a valid account number"
                  hasError={false}
                  onChange={[MockFunction]}
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Card"
                  value=""
                />,
                <Picker
                  icon="coins"
                  label=""
                  onPress={[Function]}
                  placeholder="amount"
                />,
              ],
              "style": Object {
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 40,
                "paddingHorizontal": 88,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "icon": "heart",
                  "label": "",
                  "onPress": [Function],
                  "placeholder": "loyalty programme",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [MockFunction],
                  "placeholder": "forename",
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [MockFunction],
                  "placeholder": "surname",
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "errorMessage": "Please enter a valid account number",
                  "hasError": false,
                  "onChange": [MockFunction],
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Card",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "icon": "coins",
                  "label": "",
                  "onPress": [Function],
                  "placeholder": "amount",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 50,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "disabled": undefined,
                "isLoading": undefined,
                "label": "",
                "onPress": [MockFunction],
                "type": "Primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 32,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "data": Array [
                  Object {
                    "label": "new to Avios?",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Reward Policy",
                    "onPress": [MockFunction],
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TopBar
            coins={123}
            leftIcon="Back"
            onPressLeftIcon={[MockFunction]}
          />,
          "style": Object {
            "backgroundColor": "white",
            "left": 0,
            "paddingBottom": 16,
            "paddingTop": 40,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 123,
            "leftIcon": "Back",
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock
            contentContainerStyle={
              Object {
                "width": 750,
              }
            }
            showsVerticalScrollIndicator={false}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View>
              <Pad
                height={60}
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />
              </View>
              <RewardsListItem
                code="1234"
                cost={1234}
                onPress={[Function]}
                rewardCurrency="AVIOS"
                rewardValue={123}
                settings={
                  Object {
                    "__typename": "RewardUiSettings",
                    "logoHeight": 1234,
                    "logoWidth": 1234,
                  }
                }
              />
              <View
                style={
                  Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 40,
                      "marginBottom": 30,
                    }
                  }
                >
                  
                </YuText>
                <YuText
                  style={
                    Object {
                      "fontSize": 32,
                      "lineHeight": 46,
                    }
                  }
                >
                  
                </YuText>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 60,
                    "paddingHorizontal": 30,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "fontSize": 40,
                      "marginBottom": 30,
                    }
                  }
                >
                  
                </YuText>
                <YuText
                  style={
                    Object {
                      "fontSize": 32,
                      "lineHeight": 46,
                    }
                  }
                >
                  
                </YuText>
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                }
              }
            >
              <Picker
                icon="heart"
                label=""
                onPress={[Function]}
                placeholder="loyalty programme"
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="forename"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="surname"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                errorMessage="Please enter a valid account number"
                hasError={false}
                onChange={[MockFunction]}
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Card"
                value=""
              />
              <Picker
                icon="coins"
                label=""
                onPress={[Function]}
                placeholder="amount"
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                }
              }
            >
              <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                }
              }
            >
              <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />
            </View>
            <Pad
              height={50}
            />
          </ScrollViewMock>,
          <View
            style={
              Object {
                "backgroundColor": "white",
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={123}
              leftIcon="Back"
              onPressLeftIcon={[MockFunction]}
            />
          </View>,
        ],
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <Pad
                  height={60}
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                >
                  <RewardTabs
                    activeTabIndex={0}
                    onLeftTabPress={[MockFunction]}
                    onRightTabPress={[MockFunction]}
                  />
                </View>
                <RewardsListItem
                  code="1234"
                  cost={1234}
                  onPress={[Function]}
                  rewardCurrency="AVIOS"
                  rewardValue={123}
                  settings={
                    Object {
                      "__typename": "RewardUiSettings",
                      "logoHeight": 1234,
                      "logoWidth": 1234,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      }
                    }
                  >
                    
                  </YuText>
                  <YuText
                    style={
                      Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      }
                    }
                  >
                    
                  </YuText>
                </View>
                <View
                  style={
                    Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "fontSize": 40,
                        "marginBottom": 30,
                      }
                    }
                  >
                    
                  </YuText>
                  <YuText
                    style={
                      Object {
                        "fontSize": 32,
                        "lineHeight": 46,
                      }
                    }
                  >
                    
                  </YuText>
                </View>
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                    "marginTop": 40,
                    "paddingHorizontal": 88,
                  }
                }
              >
                <Picker
                  icon="heart"
                  label=""
                  onPress={[Function]}
                  placeholder="loyalty programme"
                />
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="forename"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="surname"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />
                <TextInput
                  errorMessage="Please enter a valid account number"
                  hasError={false}
                  onChange={[MockFunction]}
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Card"
                  value=""
                />
                <Picker
                  icon="coins"
                  label=""
                  onPress={[Function]}
                  placeholder="amount"
                />
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 50,
                    "width": "100%",
                  }
                }
              >
                <Button
                  label=""
                  onPress={[MockFunction]}
                  type="Primary"
                />
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 32,
                    "width": "100%",
                  }
                }
              >
                <LinkGroup
                  data={
                    Array [
                      Object {
                        "label": "new to Avios?",
                        "onPress": [MockFunction],
                      },
                      Object {
                        "label": "Reward Policy",
                        "onPress": [MockFunction],
                      },
                    ]
                  }
                />
              </View>,
              <Pad
                height={50}
              />,
            ],
            "contentContainerStyle": Object {
              "width": 750,
            },
            "showsVerticalScrollIndicator": false,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Pad
                    height={60}
                  />,
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                      }
                    }
                  >
                    <RewardTabs
                      activeTabIndex={0}
                      onLeftTabPress={[MockFunction]}
                      onRightTabPress={[MockFunction]}
                    />
                  </View>,
                  <RewardsListItem
                    code="1234"
                    cost={1234}
                    onPress={[Function]}
                    rewardCurrency="AVIOS"
                    rewardValue={123}
                    settings={
                      Object {
                        "__typename": "RewardUiSettings",
                        "logoHeight": 1234,
                        "logoWidth": 1234,
                      }
                    }
                  />,
                  <View
                    style={
                      Object {
                        "marginTop": 60,
                        "paddingHorizontal": 30,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        }
                      }
                    >
                      
                    </YuText>
                    <YuText
                      style={
                        Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        }
                      }
                    >
                      
                    </YuText>
                  </View>,
                  <View
                    style={
                      Object {
                        "marginTop": 60,
                        "paddingHorizontal": 30,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        }
                      }
                    >
                      
                    </YuText>
                    <YuText
                      style={
                        Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        }
                      }
                    >
                      
                    </YuText>
                  </View>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "height": 60,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <RewardTabs
                      activeTabIndex={0}
                      onLeftTabPress={[MockFunction]}
                      onRightTabPress={[MockFunction]}
                    />,
                    "style": Object {
                      "alignItems": "center",
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeTabIndex": 0,
                      "onLeftTabPress": [MockFunction],
                      "onRightTabPress": [MockFunction],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "code": "1234",
                    "cost": 1234,
                    "onPress": [Function],
                    "rewardCurrency": "AVIOS",
                    "rewardValue": 123,
                    "settings": Object {
                      "__typename": "RewardUiSettings",
                      "logoHeight": 1234,
                      "logoWidth": 1234,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <YuText
                        bold={true}
                        style={
                          Object {
                            "fontSize": 40,
                            "marginBottom": 30,
                          }
                        }
                      >
                        
                      </YuText>,
                      <YuText
                        style={
                          Object {
                            "fontSize": 32,
                            "lineHeight": 46,
                          }
                        }
                      >
                        
                      </YuText>,
                    ],
                    "style": Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "bold": true,
                        "children": "",
                        "style": Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        },
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "",
                        "style": Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        },
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <YuText
                        bold={true}
                        style={
                          Object {
                            "fontSize": 40,
                            "marginBottom": 30,
                          }
                        }
                      >
                        
                      </YuText>,
                      <YuText
                        style={
                          Object {
                            "fontSize": 32,
                            "lineHeight": 46,
                          }
                        }
                      >
                        
                      </YuText>,
                    ],
                    "style": Object {
                      "marginTop": 60,
                      "paddingHorizontal": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "bold": true,
                        "children": "",
                        "style": Object {
                          "fontSize": 40,
                          "marginBottom": 30,
                        },
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "",
                        "style": Object {
                          "fontSize": 32,
                          "lineHeight": 46,
                        },
                      },
                      "ref": null,
                      "rendered": "",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Picker
                    icon="heart"
                    label=""
                    onPress={[Function]}
                    placeholder="loyalty programme"
                  />,
                  <TextInput
                    onChange={[MockFunction]}
                    placeholder="forename"
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Text"
                    value=""
                  />,
                  <TextInput
                    onChange={[MockFunction]}
                    placeholder="surname"
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Text"
                    value=""
                  />,
                  <TextInput
                    errorMessage="Please enter a valid account number"
                    hasError={false}
                    onChange={[MockFunction]}
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Card"
                    value=""
                  />,
                  <Picker
                    icon="coins"
                    label=""
                    onPress={[Function]}
                    placeholder="amount"
                  />,
                ],
                "style": Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "icon": "heart",
                    "label": "",
                    "onPress": [Function],
                    "placeholder": "loyalty programme",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onChange": [MockFunction],
                    "placeholder": "forename",
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onChange": [MockFunction],
                    "placeholder": "surname",
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "errorMessage": "Please enter a valid account number",
                    "hasError": false,
                    "onChange": [MockFunction],
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Card",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "icon": "coins",
                    "label": "",
                    "onPress": [Function],
                    "placeholder": "amount",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Button
                  label=""
                  onPress={[MockFunction]}
                  type="Primary"
                />,
                "style": Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "disabled": undefined,
                  "isLoading": undefined,
                  "label": "",
                  "onPress": [MockFunction],
                  "type": "Primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LinkGroup
                  data={
                    Array [
                      Object {
                        "label": "new to Avios?",
                        "onPress": [MockFunction],
                      },
                      Object {
                        "label": "Reward Policy",
                        "onPress": [MockFunction],
                      },
                    ]
                  }
                />,
                "style": Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "data": Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 50,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [MockFunction],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={123}
              leftIcon="Back"
              onPressLeftIcon={[MockFunction]}
            />,
            "style": Object {
              "backgroundColor": "white",
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 123,
              "leftIcon": "Back",
              "onPressLeftIcon": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`AviosDetailsScreen should render with only the pickers & text input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AviosDetailsScreen
    accountNumberValue=""
    amountValue=""
    code="1234"
    coins={123}
    confirmButtonLabel=""
    cost={1234}
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    description="A thing that does stuff"
    forenameValue=""
    hasErrorAccountNumber={false}
    instruction="instruction test"
    instructions={
      Array [
        "These",
        "are",
        "instructions",
      ]
    }
    instructionsHeading=""
    instructionsParagraph=""
    isDisabledCta={false}
    items={
      Array [
        Object {
          "id": "",
          "label": "",
        },
      ]
    }
    labelCtaPrimary="CTA Primary"
    loyaltyList={
      Array [
        Object {
          "id": "program test",
          "label": "test",
        },
      ]
    }
    loyaltyValue=""
    onCardChange={[MockFunction]}
    onForenameChange={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onPressAmountPicker={[MockFunction]}
    onPressConfirm={[MockFunction]}
    onPressLoyaltyPicker={[MockFunction]}
    onPressPolicy={[MockFunction]}
    onPressSetUp={[MockFunction]}
    onPressTopBar={[MockFunction]}
    onRightTabPress={[MockFunction]}
    onSurnameChange={[MockFunction]}
    rewardCurrency="AVIOS"
    rewardValue={123}
    surnameValue=""
    uiSettings={
      Object {
        "__typename": "RewardUiSettings",
        "logoHeight": 1234,
        "logoWidth": 1234,
      }
    }
    welcomeHeading=""
    welcomeParagraph=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock
          contentContainerStyle={
            Object {
              "paddingTop": 32,
              "width": 750,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 40,
                "paddingHorizontal": 88,
              }
            }
          >
            <Picker
              icon="heart"
              label=""
              onPress={[Function]}
              placeholder="loyalty programme"
            />
            <TextInput
              onChange={[MockFunction]}
              placeholder="forename"
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Text"
              value=""
            />
            <TextInput
              onChange={[MockFunction]}
              placeholder="surname"
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Text"
              value=""
            />
            <TextInput
              errorMessage="Please enter a valid account number"
              hasError={false}
              onChange={[MockFunction]}
              style={
                Object {
                  "paddingHorizontal": 0,
                }
              }
              type="Card"
              value=""
            />
            <Picker
              icon="coins"
              label=""
              onPress={[Function]}
              placeholder="amount"
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 50,
                "width": "100%",
              }
            }
          >
            <Button
              label=""
              onPress={[MockFunction]}
              type="Primary"
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 32,
                "width": "100%",
              }
            }
          >
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "new to Avios?",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Reward Policy",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />
          </View>
          <Pad
            height={50}
          />
        </ScrollViewMock>,
        <View
          style={
            Object {
              "backgroundColor": "white",
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TopBar
            coins={123}
            leftIcon="Back"
            onPressLeftIcon={[MockFunction]}
          />
        </View>,
      ],
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            null,
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                }
              }
            >
              <Picker
                icon="heart"
                label=""
                onPress={[Function]}
                placeholder="loyalty programme"
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="forename"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="surname"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                errorMessage="Please enter a valid account number"
                hasError={false}
                onChange={[MockFunction]}
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Card"
                value=""
              />
              <Picker
                icon="coins"
                label=""
                onPress={[Function]}
                placeholder="amount"
              />
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                }
              }
            >
              <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                }
              }
            >
              <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />
            </View>,
            <Pad
              height={50}
            />,
          ],
          "contentContainerStyle": Object {
            "paddingTop": 32,
            "width": 750,
          },
          "showsVerticalScrollIndicator": false,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Picker
                  icon="heart"
                  label=""
                  onPress={[Function]}
                  placeholder="loyalty programme"
                />,
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="forename"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />,
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="surname"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />,
                <TextInput
                  errorMessage="Please enter a valid account number"
                  hasError={false}
                  onChange={[MockFunction]}
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Card"
                  value=""
                />,
                <Picker
                  icon="coins"
                  label=""
                  onPress={[Function]}
                  placeholder="amount"
                />,
              ],
              "style": Object {
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 40,
                "paddingHorizontal": 88,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "icon": "heart",
                  "label": "",
                  "onPress": [Function],
                  "placeholder": "loyalty programme",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [MockFunction],
                  "placeholder": "forename",
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [MockFunction],
                  "placeholder": "surname",
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "errorMessage": "Please enter a valid account number",
                  "hasError": false,
                  "onChange": [MockFunction],
                  "style": Object {
                    "paddingHorizontal": 0,
                  },
                  "type": "Card",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "icon": "coins",
                  "label": "",
                  "onPress": [Function],
                  "placeholder": "amount",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 50,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "disabled": undefined,
                "isLoading": undefined,
                "label": "",
                "onPress": [MockFunction],
                "type": "Primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />,
              "style": Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 32,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "data": Array [
                  Object {
                    "label": "new to Avios?",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Reward Policy",
                    "onPress": [MockFunction],
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TopBar
            coins={123}
            leftIcon="Back"
            onPressLeftIcon={[MockFunction]}
          />,
          "style": Object {
            "backgroundColor": "white",
            "left": 0,
            "paddingBottom": 16,
            "paddingTop": 40,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 123,
            "leftIcon": "Back",
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock
            contentContainerStyle={
              Object {
                "paddingTop": 32,
                "width": 750,
              }
            }
            showsVerticalScrollIndicator={false}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                }
              }
            >
              <Picker
                icon="heart"
                label=""
                onPress={[Function]}
                placeholder="loyalty programme"
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="forename"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                onChange={[MockFunction]}
                placeholder="surname"
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Text"
                value=""
              />
              <TextInput
                errorMessage="Please enter a valid account number"
                hasError={false}
                onChange={[MockFunction]}
                style={
                  Object {
                    "paddingHorizontal": 0,
                  }
                }
                type="Card"
                value=""
              />
              <Picker
                icon="coins"
                label=""
                onPress={[Function]}
                placeholder="amount"
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                }
              }
            >
              <Button
                label=""
                onPress={[MockFunction]}
                type="Primary"
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                }
              }
            >
              <LinkGroup
                data={
                  Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ]
                }
              />
            </View>
            <Pad
              height={50}
            />
          </ScrollViewMock>,
          <View
            style={
              Object {
                "backgroundColor": "white",
                "left": 0,
                "paddingBottom": 16,
                "paddingTop": 40,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <TopBar
              coins={123}
              leftIcon="Back"
              onPressLeftIcon={[MockFunction]}
            />
          </View>,
        ],
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              null,
              <View
                style={
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                    "marginTop": 40,
                    "paddingHorizontal": 88,
                  }
                }
              >
                <Picker
                  icon="heart"
                  label=""
                  onPress={[Function]}
                  placeholder="loyalty programme"
                />
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="forename"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />
                <TextInput
                  onChange={[MockFunction]}
                  placeholder="surname"
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Text"
                  value=""
                />
                <TextInput
                  errorMessage="Please enter a valid account number"
                  hasError={false}
                  onChange={[MockFunction]}
                  style={
                    Object {
                      "paddingHorizontal": 0,
                    }
                  }
                  type="Card"
                  value=""
                />
                <Picker
                  icon="coins"
                  label=""
                  onPress={[Function]}
                  placeholder="amount"
                />
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 50,
                    "width": "100%",
                  }
                }
              >
                <Button
                  label=""
                  onPress={[MockFunction]}
                  type="Primary"
                />
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 32,
                    "width": "100%",
                  }
                }
              >
                <LinkGroup
                  data={
                    Array [
                      Object {
                        "label": "new to Avios?",
                        "onPress": [MockFunction],
                      },
                      Object {
                        "label": "Reward Policy",
                        "onPress": [MockFunction],
                      },
                    ]
                  }
                />
              </View>,
              <Pad
                height={50}
              />,
            ],
            "contentContainerStyle": Object {
              "paddingTop": 32,
              "width": 750,
            },
            "showsVerticalScrollIndicator": false,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Picker
                    icon="heart"
                    label=""
                    onPress={[Function]}
                    placeholder="loyalty programme"
                  />,
                  <TextInput
                    onChange={[MockFunction]}
                    placeholder="forename"
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Text"
                    value=""
                  />,
                  <TextInput
                    onChange={[MockFunction]}
                    placeholder="surname"
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Text"
                    value=""
                  />,
                  <TextInput
                    errorMessage="Please enter a valid account number"
                    hasError={false}
                    onChange={[MockFunction]}
                    style={
                      Object {
                        "paddingHorizontal": 0,
                      }
                    }
                    type="Card"
                    value=""
                  />,
                  <Picker
                    icon="coins"
                    label=""
                    onPress={[Function]}
                    placeholder="amount"
                  />,
                ],
                "style": Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 40,
                  "paddingHorizontal": 88,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "icon": "heart",
                    "label": "",
                    "onPress": [Function],
                    "placeholder": "loyalty programme",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onChange": [MockFunction],
                    "placeholder": "forename",
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "onChange": [MockFunction],
                    "placeholder": "surname",
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "errorMessage": "Please enter a valid account number",
                    "hasError": false,
                    "onChange": [MockFunction],
                    "style": Object {
                      "paddingHorizontal": 0,
                    },
                    "type": "Card",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "icon": "coins",
                    "label": "",
                    "onPress": [Function],
                    "placeholder": "amount",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Button
                  label=""
                  onPress={[MockFunction]}
                  type="Primary"
                />,
                "style": Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 50,
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "disabled": undefined,
                  "isLoading": undefined,
                  "label": "",
                  "onPress": [MockFunction],
                  "type": "Primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LinkGroup
                  data={
                    Array [
                      Object {
                        "label": "new to Avios?",
                        "onPress": [MockFunction],
                      },
                      Object {
                        "label": "Reward Policy",
                        "onPress": [MockFunction],
                      },
                    ]
                  }
                />,
                "style": Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginTop": 32,
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "data": Array [
                    Object {
                      "label": "new to Avios?",
                      "onPress": [MockFunction],
                    },
                    Object {
                      "label": "Reward Policy",
                      "onPress": [MockFunction],
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 50,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [MockFunction],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TopBar
              coins={123}
              leftIcon="Back"
              onPressLeftIcon={[MockFunction]}
            />,
            "style": Object {
              "backgroundColor": "white",
              "left": 0,
              "paddingBottom": 16,
              "paddingTop": 40,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 123,
              "leftIcon": "Back",
              "onPressLeftIcon": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
